# AzureDatabricks

./: .gitignore  README.md
airflow/: README.md  airflow_install_run.sh
airflow/dags/: dag.py
airflow/notebooks/: job1.py  job2.py  job3.py
contextualization/: DataContextualizationSolution.md
ge/expectations/: my_exp.json
ge/notebooks/: ge_read_exp.py
notebooks/: 01_master_data_transform.py  02_generate_event_data.py  03_event_data_transform.py  04_event_data_retry.py  clear_env.py  clear_environment.py  display_data.py  event_data.py  fruits.csv  imports_variables.py  master_data.py  mycontroller.py
python/: mypython.py  packagewhl.py  setup.cfg
samples/: show_data_in_tables.py
