[metadata]
name = mytrans
version = 0.0.1
 
[options]
package_dir =
    python = .
zip_safe = True
include_package_data = True
install_requires =
    pyspark==3.2.1
    pandas==1.3.2
    opencensus-ext-azure==1.1.0

[options.entry_points]
console_scripts =
    my_entry_point = python.mypython:trans

[options.extras_require]
dev =
    flake8>=3.9.2
    dbx==0.4.1
test =
    pytest>=6.2.4
 
[flake8]
max-line-length=120